@@ -3,7 +3,7 @@
  * ONAP PAP
  * ================================================================================
  * Copyright (C) 2019, 2021 AT&T Intellectual Property. All rights reserved.
- * Modifications Copyright (C) 2020-2021 Nordix Foundation.
+ * Modifications Copyright (C) 2020-2022 Nordix Foundation.
  * Modifications Copyright (C) 2021-2022 Bell Canada. All rights reserved.
  * ================================================================================
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -28,14 +28,18 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertSame;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doThrow;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
+import io.micrometer.core.instrument.MeterRegistry;
+import io.micrometer.core.instrument.noop.NoopTimer;
+import io.micrometer.core.instrument.simple.SimpleMeterRegistry;
 import java.util.List;
 import java.util.Set;
 import javax.ws.rs.core.Response.Status;
@@ -86,7 +90,7 @@ public class TestPdpGroupDeleteProvider extends ProviderSuper {
     @Override
     public void setUp() throws Exception {
         super.setUp();
-        prov = new MyProvider();
+        prov = new MyProvider(new SimpleMeterRegistry());
         super.initialize(prov);
 
         ident = policy1.getIdentifier();
@@ -94,20 +98,6 @@ public class TestPdpGroupDeleteProvider extends ProviderSuper {
         fullIdent = new ToscaConceptIdentifierOptVersion(ident.getName(), ident.getVersion());
 
         updater = prov.makeUpdater(session, policy1, fullIdent);
-    }
-
-    @Test
-    public void testDeleteGroup_Inctive() throws Exception {
-        PdpGroup group = loadGroup("deleteGroup.json");
-
-        when(session.getGroup(GROUP1_NAME)).thenReturn(group);
-
-        prov.deleteGroup(GROUP1_NAME);
-
-        verify(session).deleteGroupFromDb(group);
-
-        // should be no PDP requests
-        verify(session, never()).addRequests(any(), any());
     }
 
     @Test
@@ -123,7 +113,7 @@ public class TestPdpGroupDeleteProvider extends ProviderSuper {
     }
 
     @Test
-    public void testDeleteGroup_NotFound() throws Exception {
+    public void testDeleteGroup_NotFound() {
         assertThatThrownBy(() -> prov.deleteGroup(GROUP1_NAME)).isInstanceOf(PfModelException.class)
                 .hasMessage("group not found")
                 .extracting(ex -> ((PfModelException) ex).getErrorResponse().getResponseCode())
@@ -140,7 +130,7 @@ public class TestPdpGroupDeleteProvider extends ProviderSuper {
 
         verify(session).deleteGroupFromDb(group);
 
-        // should done no requests for the PDPs
+        // should have done no requests for the PDPs
         verify(session, never()).addRequests(any(), any());
     }
 
@@ -163,14 +153,14 @@ public class TestPdpGroupDeleteProvider extends ProviderSuper {
      */
     @Test
     public void testUndeploy_Full() throws Exception {
-        when(toscaService.getFilteredPolicyList(any())).thenReturn(Arrays.asList(policy1));
+        when(toscaService.getFilteredPolicyList(any())).thenReturn(List.of(policy1));
 
         PdpGroup group = loadGroup("undeploy.json");
 
-        when(pdpGroupService.getFilteredPdpGroups(any())).thenReturn(Arrays.asList(group));
-        when(toscaService.getFilteredPolicyList(any())).thenReturn(Arrays.asList(policy1));
+        when(pdpGroupService.getFilteredPdpGroups(any())).thenReturn(List.of(group));
+        when(toscaService.getFilteredPolicyList(any())).thenReturn(List.of(policy1));
 
-        PdpGroupDeleteProvider deleteProvider = new PdpGroupDeleteProvider();
+        PdpGroupDeleteProvider deleteProvider = new PdpGroupDeleteProvider(new SimpleMeterRegistry());
         super.initialize(deleteProvider);
         deleteProvider.undeploy(fullIdent, DEFAULT_USER);
 
@@ -190,11 +180,11 @@ public class TestPdpGroupDeleteProvider extends ProviderSuper {
         assertEquals("pdpA", req.getName());
         assertEquals(GROUP1_NAME, req.getPdpGroup());
         assertEquals("pdpTypeA", req.getPdpSubgroup());
-        assertEquals(Arrays.asList(policy1.getIdentifier()), req.getPoliciesToBeUndeployed());
+        assertEquals(List.of(policy1.getIdentifier()), req.getPoliciesToBeUndeployed());
     }
 
     @Test
-    public void testUndeployPolicy_NotFound() throws Exception {
+    public void testUndeployPolicy_NotFound() {
         when(session.isUnchanged()).thenReturn(true);
 
         assertThatThrownBy(() -> prov.undeploy(optIdent, DEFAULT_USER)).isInstanceOf(PfModelException.class)
@@ -282,7 +272,9 @@ public class TestPdpGroupDeleteProvider extends ProviderSuper {
     }
 
     private class MyProvider extends PdpGroupDeleteProvider {
-        private MyProvider() {
+
+        private MyProvider(MeterRegistry registry) {
+            super(registry);
             super.initialize();
         }
 
